# TriangleCounting

./: BUILD.txt  CMakeLists.txt  LICENSE.txt  Makefile  README.md  cmdline.c  defs.h  io.c  main.c  proto.h  ptc.c  struct.h  tc.h
conf/: gkbuild.cmake
test/: p2p-Gnutella31.metis
